# little-wine

./: .gitignore  Cargo.toml  clean_wine.json  data.json  little_wine.json  test.txt  test_prompt.txt
clean-data/: Cargo.toml
clean-data/src/: main.rs
data/: Cargo.toml
data/src/: lib.rs
import-wine/: Cargo.toml
import-wine/src/: main.rs
little-wine/: Cargo.toml  test.py
little-wine-meilli/: Cargo.toml
little-wine-meilli/src/: main.rs
little-wine/src/: main.rs
meilli-search/: Cargo.toml
meilli-search/src/: main.rs
mymodel/: Cargo.toml
mymodel/src/: lib.rs
mytokenizers/: Cargo.toml
mytokenizers/src/: lib.rs
qwen/: Cargo.toml  test.py
qwen/src/: lib.rs
search-wine/: Cargo.toml
search-wine/src/: main.rs
