[workspace]
resolver = "2"
members = ["clean-data", "data", "little-wine"]

[workspace.dependencies]
serde = "1.0.217"
serde_json = "1.0.134"
anyhow = "1.0.95"
macross = { path = "../macross" }
tokenizers = "0.21.0"
candle-core = "0.8.1"
candle-nn = "0.8.1"
candle-transformers = "0.8.1"
reqwest = "0.11.6"