[workspace]
resolver = "2"
members = ["clean-data", "data", "import-wine", "little-wine", "meilli-search", "mytokenizers", "qwen", "search-wine"]

[workspace.dependencies]
serde = "1.0.217"
serde_json = "1.0.135"
anyhow = "1.0.95"
macross = { path = "../macross" }
tokenizers = "0.21.0"
candle-core = "0.8.2"
candle-nn = "0.8.2"
candle-transformers = "0.8.2"
reqwest = "0.12.12"
meilisearch-sdk = "0.27.1"
futures = "0.3"
tokio = "1.43.0"
