[package]
name = "import-wine"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true, features = ["json"] }
data = { path = "../data" }
macross = { workspace = true }
tokenizers = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
mytokenizers = { path = "../mytokenizers" }
mymodel = { path = "../mymodel" }

[features]
default = []
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]