[package]
name = "little-wine"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
data = { path = "../data" }
macross = { workspace = true }
tokenizers = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }
reqwest = { workspace = true }
mytokenizers = { path = "../mytokenizers" }
mymodel = { path = "../mymodel" }
qwen = { path = "../qwen" }
[features]
default = []
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]