[package]
name = "meilli-search"
version = "0.1.0"
edition = "2021"

[dependencies]
meilisearch-sdk = { workspace = true }
futures = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true, features = ["json"] }