[package]
name = "qwen"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
macross = { workspace = true }
tokenizers = { workspace = true }
candle-core = { workspace = true }
candle-nn = { workspace = true }
candle-transformers = { workspace = true }

[features]
default = []
metal = ["candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]